Update requirements.txt to allow other projects to depend on this.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ hydra
 omegaconf
 pytorch-lightning
 torch
--e git://github.com/snisarg/text.git#egg=text
--e git://github.com/snisarg/hydra-text.git#egg=hydra-text
+svcca @ git+http://github.com/snisarg/text.git#egg=text
+svcca @ git+http://github.com/snisarg/hydra-text.git#egg=hydra-text
+
